Removed JVM forking in maven-jetty-plugin