@@ -39,15 +39,12 @@
                 <spring.profiles.active>default</spring.profiles.active>
                 <jetty.port>8080</jetty.port>
                 <jetty.scanIntervalSeconds>1</jetty.scanIntervalSeconds>
-                <jetty.jvmArgs>-XX:MaxPermSize=32m -Xms64m -Xmx128m</jetty.jvmArgs>
             </properties>
         </profile>
         <profile>
             <id>ippon</id>
             <properties>
                 <spring.profiles.active>ippon</spring.profiles.active>
-                <!-- Jetty must run in forked mode to use this parameter : mvn:jetty-forked -->
-                <jetty.jvmArgs>-Djetty.port=80 -Dspring.profiles.active=ippon -XX:MaxPermSize=64m -Xms128m -Xmx1024m</jetty.jvmArgs>
                 <jetty.port>80</jetty.port>
                 <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>
             </properties>
@@ -386,7 +383,6 @@
                     <scanIntervalSeconds>${jetty.scanIntervalSeconds}</scanIntervalSeconds>
                     <stopKey>stop-jetty</stopKey>
                     <stopPort>9999</stopPort>
-                    <jvmArgs>${jetty.jvmArgs}</jvmArgs>
                     <systemProperties>
                         <systemProperty>
                             <name>spring.profiles.active</name>
